lcb: Initial support for functions in assembly string